<resources>
    <string name="app_name">汉语时</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_signup">申请入驻</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_main">汉语时</string>
    <string name="title_activity_guide">引导</string>

    <string name="tab_home">首页</string>
    <string name="tab_recently">最近</string>
    <string name="tab_me">我</string>

    <string name="Signup">申请入驻</string>
    <string name="Login">登录</string>
    <string name="yuan">元</string>
    <string name="mins">分钟</string>
    <string name="hours">小时</string>

    <string name="params_error">参数错误</string>
    <string name="Waiting">请稍等...</string>
    <string name="Cancel">取消</string>
    <string name="OK">确定</string>

    <!--splash activity-->
    <string name="video_service_login_failed">视频系统加载失败，请检查网络情况，并重新启动汉语时。</string>

    <!--home fragment-->
    <string name="offline_app_title">汉语时(已离线)</string>
    <string name="be_online">我要上线</string>
    <string name="be_onlive">我要直播</string>
    <string name="be_offline">我要下线</string>
    <string name="user_status_invalid">用户状态异常</string>

    <!--me fragment-->
    <string name="Logout">登出</string>
    <string name="one2one_binded_stu_list">1对1绑定信息</string>
    <string name="one2one_appointment">1对1预约信息</string>
    <string name="on_live_time">直播时长</string>
    <string name="Version">版本</string>
    <string name="Score">综合评分</string>
    <string name="Served_Time">授课时长</string>
    <string name="Closed_Commissions">已结佣金</string>
    <string name="Outstanding_Commissions">未结佣金</string>
    <string name="Email_Support">邮件客服</string>
    <string name="dialog_logout_message">你确定要登出吗?</string>
    <string name="referral_code">推荐码</string>
    <string name="FAQ">FAQ</string>

    <!--reservation fragment-->
    <string name="no_record">你暂无任何陪练记录</string>

    <!--service-->
    <string name="notify_foregroundservice">汉语时视频服务</string>

    <!--faq activity-->
    <string name="title_activity_faq">FAQ</string>


    <string name="Student">学生</string>
    <string name="Binding_Time">绑定时间(剩余)</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>


    <!--阿里云-->

    <string name="toggle_switch_flash_on">开启闪光灯</string>
    <string name="toggle_switch_flash_off">关闭闪光灯</string>
    <string name="app_camera">切换摄像头</string>
    <string name="live_push">开始推流</string>
    <string name="live_stop">结束推流</string>
    <string name="toggle_switch_beauty_on">美颜开启</string>
    <string name="toggle_switch_beauty_off">美颜关闭</string>

    <string name="no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="no_record_audio_permission">没有权限使用录音，请开启录音权限</string>

    <string name="VIDEO_CAPTURE_FPS">视频采集帧率（实时帧率）:</string>
    <string name="AUDIO_ENCODER_FPS">音频编码帧率（实时帧率）:</string>
    <string name="VIDEO_ENCODER_FPS">视频编码帧率（实时帧率）:</string>
    <string name="OUTPUT_BITRATE">输出码率（实时码率）:</string>
    <string name="AV_OUTPUT_DIFF">当前输出流，audio pts与video pts的差值:</string>
    <string name="AUDIO_OUTPUT_FPS">音频输出帧率（实时帧率）:</string>
    <string name="VIDEO_OUTPUT_FPS">视频输出帧率（实时帧率）:</string>
    <string name="STREAM_PUBLISH_TIME">推流发布耗时（推流开始到发布流成功耗时）:</string>
    <string name="STREAM_SERVER_IP">推流服务器IP:</string>
    <string name="VIDEO_DELAY_DURATION">视频延迟时长:</string>
    <string name="AUDIO_DELAY_DURATION">音频延迟时长:</string>
    <string name="VIDEO_CACHE_FRAME_CNT">缓冲队列视频帧数:</string>
    <string name="AUDIO_CACHE_FRAME_CNT">缓冲队列音频帧数:</string>
    <string name="VIDEO_CACHE_BYTE_SIZE">缓冲队列视频数据总数:</string>
    <string name="AUDIO_CACHE_BYTE_SIZE">缓冲队列音频数据总数:</string>
    <string name="VIDEO_FRAME_DISCARD_CNT">视频丢弃总帧数:</string>
    <string name="AUDIO_FRAME_DISCARD_CNT">音频丢弃总帧数:</string>
    <string name="CUR_VIDEO_BUEATY_DURATION">当前视频帧美颜耗时:</string>
    <string name="CUR_VIDEO_ENCODER_DURATION">当前视频帧编码耗时:</string>
    <string name="cur_video_encode_bitrate">当前视频编码码率:</string>

    <string name="illegal_output_resolution">选择输出分辨率过大</string>

    <string name="VIDEO_OUTPUT_FRAME_COUNT">获取视频流已发送帧数:</string>
    <string name="VIDEO_DATA">视频流已发送数据量:</string>
    <string name="VIDEO_BUFFER_COUNT">当前手机端缓存的视频帧总数:</string>
    <string name="VIDEO_DROPPED_FRAMECOUNT">当前直播视频流丢帧总数:</string>
    <string name="AUDIO_DATA">音频流已发送数据量:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--阿里云-->
</resources>
