<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chinessy.android.fragment.MyFragment"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@mipmap/me_bg"
                android:id="@+id/my_rl_personalinfo">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    >

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@mipmap/me_profilepic"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="25dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/my_tv_name"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:layout_margin="5dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/my_tv_info"
                            android:textColor="@color/white"
                            android:layout_margin="5dp"
                            />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:padding="5dp"
                        android:id="@+id/my_rl_servedtime"
                        android:layout_marginBottom="1dp"
                        android:background="@drawable/btn_long_white"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_l"
                            android:text="@string/Served_Time"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/text_size_m"
                            android:id="@+id/my_tv_servedtime"
                            />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:padding="5dp"
                        android:id="@+id/my_rl_closedcommissions"
                        android:background="@drawable/btn_long_white"
                        android:layout_marginBottom="1dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_l"
                            android:text="@string/Closed_Commissions"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/text_size_m"
                            android:id="@+id/my_tv_closedcommissions"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:padding="5dp"
                        android:id="@+id/my_rl_outstandingcommissions"
                        android:background="@drawable/btn_long_white"
                        android:layout_marginBottom="1dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_l"
                            android:text="@string/Outstanding_Commissions"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/text_size_m"
                            android:id="@+id/my_tv_outstandingcommissions"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:padding="5dp"
                        android:id="@+id/my_rl_score"
                        android:background="@drawable/btn_long_white"
                        android:layout_marginBottom="1dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_l"
                            android:text="@string/Score"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/text_size_m"
                            android:id="@+id/my_tv_score"
                            />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:padding="5dp"
                        android:id="@+id/my_rl_faq"
                        android:background="@drawable/btn_long_white"
                        android:layout_marginBottom="1dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_l"
                            android:text="@string/FAQ"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/text_size_m"
                            android:id="@+id/my_tv_faq"
                            />
                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:padding="5dp"
                        android:id="@+id/my_rl_emailsupport"
                        android:background="@drawable/btn_long_white"
                        android:layout_marginBottom="1dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_l"
                            android:text="@string/Email_Support"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/text_size_m"
                            />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:padding="5dp"
                        android:id="@+id/my_rl_about"
                        android:background="@drawable/btn_long_white"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_l"
                            android:text="@string/Version"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/text_size_m"
                            android:text="v1.0.2"
                            />
                    </RelativeLayout>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Logout"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_long_white"
                    android:textColor="@color/main_color"
                    android:id="@+id/my_btn_logout"
                    android:textAllCaps="false"
                    android:layout_marginBottom="20dp"
                    >
                </Button>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
